@@ -28,7 +28,7 @@
 #include "bkpts.h"
 #define write_log printf
 static const struct uae_prefs currprefs = {0, 1, 1};
-#if CYGNUS_SIM
+#if defined(CYGNUS_SIM) && !defined(NO_GDB)
 extern const char *symfile;
 #endif /* CYGNUS_SIM */
 // tiemu end
@@ -129,11 +129,10 @@ static void build_cpufunctbl (void)
 			  : currprefs.cpu_level == 3 ? op_smalltbl_1_ff
 			  : currprefs.cpu_level == 2 ? op_smalltbl_2_ff
 			  : currprefs.cpu_level == 1 ? op_smalltbl_3_ff
-			  : ! currprefs.cpu_compatible ? op_smalltbl_4_ff
 			  : op_smalltbl_5_ff);
 
-    write_log ("UAE: Building CPU function table (%d %d %d).\n",
-	       currprefs.cpu_level, currprefs.cpu_compatible, currprefs.address_space_24);
+    write_log ("UAE: Building CPU function table (%d %d).\n",
+	       currprefs.cpu_level, currprefs.address_space_24);
 
     for (opcode = 0; opcode < 65536; opcode++)
 	cpufunctbl[opcode] = op_illg_1;
@@ -190,16 +189,6 @@ static void update_68k_cycles (void)
 
 void check_prefs_changed_cpu (void)
 {
-    if (currprefs.cpu_level != changed_prefs.cpu_level
-	|| currprefs.cpu_compatible != changed_prefs.cpu_compatible)
-    {
-	if (!currprefs.cpu_compatible && changed_prefs.cpu_compatible)
-	    fill_prefetch_slow ();
-
-	currprefs.cpu_level = changed_prefs.cpu_level;
-	currprefs.cpu_compatible = changed_prefs.cpu_compatible;
-	build_cpufunctbl ();
-    }
     if (currprefs.m68k_speed != changed_prefs.m68k_speed) {
 	currprefs.m68k_speed = changed_prefs.m68k_speed;
 	reset_frame_rate_hack ();
@@ -212,7 +201,7 @@ void init_m68k (void)
 {
     int i;
 
-    printf ("UAE: version 0.8.23\n");
+    printf ("UAE: version 0.8.25\n");
 //    update_68k_cycles ();
 
     for (i = 0 ; i < 256 ; i++) {
@@ -271,8 +260,6 @@ void init_m68k (void)
         write_log ("000");
         break;
     }
-    if (currprefs.cpu_compatible)
-        write_log (" (compatible mode)");
     if (currprefs.address_space_24) {
 	regs.address_space_mask = 0x00ffffff;
 	write_log (" 24-bit addressing");
@@ -831,7 +818,10 @@ void Exception_normal (int nr, uaecptr oldpc)
 		m68k_areg(regs, 7) -= 2;
 		put_word (m68k_areg(regs, 7), 0xb000 + nr * 4);
 	    }
+#if 0
 	    write_log ("Exception %d (%x) at %x -> %x!\n", nr, oldpc, currpc, get_long (regs.vbr + 4*nr));
+#endif
+	    
 	} else if (nr ==5 || nr == 6 || nr == 7 || nr == 9) {
 	    m68k_areg(regs, 7) -= 4;
 	    put_long (m68k_areg(regs, 7), oldpc);
@@ -877,7 +867,7 @@ kludge_me_do:
     if (newpc & 1) {
 #if 0
 	if (nr == 2 || nr == 3)
-	    uae_reset (); /* there is nothing else we can do.. */
+	    uae_reset (1); /* there is nothing else we can do.. */
 	else
 #endif /* 0 */
 	    exception3 (regs.ir, m68k_getpc(), newpc);
@@ -1256,6 +1246,16 @@ static char* ccnames[] =
 
 void m68k_reset (void)
 {
+#if 0 /* The CPU is always the same in TiEmu. */
+    if (currprefs.cpu_level != changed_prefs.cpu_level
+	|| currprefs.address_space_24 != changed_prefs.address_space_24)
+    {
+	currprefs.address_space_24 = changed_prefs.address_space_24;
+	currprefs.cpu_level = changed_prefs.cpu_level;
+	build_cpufunctbl ();
+    }
+#endif /* 0 */
+
 //    regs.kick_mask = 0x00F80000;
     regs.spcflags = 0;
 #if 0
@@ -1345,7 +1345,7 @@ unsigned long REGPARAM2 op_illg (uae_u32 opcode)
 	    call_calltrap (opcode & 0xFFF);
 	}
 #endif /* 0 */
-#if CYGNUS_SIM
+#if defined(CYGNUS_SIM) && !defined(NO_GDB)
 	/* Ignore ER_ASAP_TOO_LONG when running a file to debug. */
 	if (symfile && opcode == 0xA000 + 161) {
 		m68k_incpc(2);
@@ -1434,14 +1434,14 @@ static int do_specialties (int cycles)
 	    do_copper ();
     }
 
-    if (regs.spcflags & SPCFLAG_DOTRACE) {
+    if (regs.spcflags & SPCFLAG_DOTRACE)
 	Exception (9,last_trace_ad);
-    }
+
     while (regs.spcflags & SPCFLAG_STOP) {
 	do_cycles (4 * CYCLE_UNIT);
 	if (regs.spcflags & SPCFLAG_COPPER)
 	    do_copper ();
-	if (regs.spcflags & (SPCFLAG_INT | SPCFLAG_DOINT)){
+	if (regs.spcflags & (SPCFLAG_INT | SPCFLAG_DOINT)) {
 	    int intr = intlev ();
 	    unset_special (SPCFLAG_INT | SPCFLAG_DOINT);
 	    if (intr != -1 && intr > regs.intmask) {
@@ -1592,10 +1592,10 @@ void m68k_go (int may_quit)
 		/* system is very badly confused */
 		write_log ("double bus error or corrupted stack, forcing reboot..\n");
 		regs.panic = 0;
-		uae_reset ();
+		uae_reset (1);
 	    }
 	}
-	m68k_run1 (currprefs.cpu_compatible ? m68k_run_1 : m68k_run_2);
+	m68k_run1 (currprefs.cpu_level == 0 ? m68k_run_1 : m68k_run_2);
     }
     in_m68k_go--;
 }
@@ -1786,11 +1786,14 @@ uae_u8 *restore_cpu (uae_u8 *src)
 
 static int cpumodel[] = { 68000, 68010, 68020, 68020 };
 
-uae_u8 *save_cpu (int *len)
+uae_u8 *save_cpu (int *len, uae_u8 *dstptr)
 {
     uae_u8 *dstbak,*dst;
     int model,i;
 
+    if (dstptr)
+	dstbak = dst = dstptr;
+    else
     dstbak = dst = malloc(4+4+15*4+4+4+4+4+2+4+4+4+4+4+4+4);
     model = cpumodel[currprefs.cpu_level];
     save_u32 (model);					/* MODEL */
