@@ -15,6 +15,7 @@ Bug:
 	- [roms] $2000: improved bug #1434606: "Calculator panel on the background"
 	- [roms] $2005: accept TI92 files on Titanium and others
 	- [roms] $2011: bug #1434600 => goes to HOME when calc is not ready
+	- [roms] $2013: import UAE 0.8.25 (upgrade from 0.8.23) from TiEmu3 trunk.
 
 - 07/02/2006, version 2.05:
 	- [roms] $1904: fixed bug #1425569 ("Error code not found" when sending 
